--- a/.env-example
+++ b/.env-example
@@ -2,3 +2,6 @@ MONGODB_URI=mongodb+srv://<username>:<password>@marketplace-dev.oczsjxa.mongodb.
 API_BASE=/app/second-hand-marketplace/api
 
 NEXT_PUBLIC_API_URL=$API_BASE
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="<Your Cloud Name>"
+CLOUDINARY_API_KEY="<Your API Key>"
+CLOUDINARY_API_SECRET="<Your API Secret>"
